--- a/dice-game/package.json
+++ b/dice-game/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "revision",
+  "name": "dice-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "sass": "^1.85.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
