--- a/redux-exemple/package.json
+++ b/redux-exemple/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dice-game",
+  "name": "redux-exemple",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^7.2.0",
-    "sass": "^1.85.0"
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
