--- a/rev/package.json
+++ b/rev/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-exemple",
+  "name": "rev",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "sass": "^1.85.1"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
