--- a/redux-exemple/package.json
+++ b/redux-exemple/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.85.1"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
