--- a/redux-exemple/package.json
+++ b/redux-exemple/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.2.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.85.1"
